<resources>
    <string name="app_name">SECORA™ Wallet</string>
    <string name="data_enable">Data connection is not enabled. Please enable data connection in settings</string>
    <string name="no_network_error_msg">Data connection is not enabled. Please enable data connection and try again</string>
    <string name="unable_to_reach_internet">Unable to reach server. Check your internet connection and try again.</string>
    <string name="settings">Settings</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="location_enable">GPS Location in not enabled. Please enable GPS Location in settings</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="place_holder_new_password">Enter new password</string>
    <string name="verification_code">Verification Code</string>
    <string name="hint_user_name">Enter your username</string>
    <string name="welcome_screen1_text1">Your money, \n your control, your way </string>
    <string name="welcome_screen2_text1">One tap to complete \n the transaction</string>
    <string name="welcome_screen3_text1">Adding payments \n made effortlessly</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="verify_email">Verify Email</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="login_with_cognito">Click to view login options</string>
    <string name="text_confirm_wallet_pin">Confirm PIN</string>
    <string name="text_create_wallet">We will keep card information securely stored on your device, therefore it\'s very important to have a PIN</string>
    <string name="text_title_enter_pin">Please enter your PIN to proceed</string>
    <string name="error_failure">New PIN and Confirm wallet PIN does not match</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fingerprint">Fingerprint Authentication </string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pairing_device">Pairing Device..</string>
    <string name="bluetooth_turn_on">Please turn on your phone bluetooth</string>
    <string name="bluetooth_reconnecting">Reconnecting Bluetooth..</string>
    <string name="bluetooth_reconnect_failed">Bluetooth reconnect failed…</string>
    <string name="user_session_expired">Session Expired, Please Login again</string>
    <string name="logout_success">Logged Out Successfully</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="text_enter_wallet_pin">Enter Wallet PIN</string>
    <string name="text_personal_card">Jim\'s Personal Card</string>
    <string name="master_card">Mastercard</string>
    <string name="master_card_">Master Card</string>
    <string name="visa">Visa</string>
    <string name="card_number">**** **** **** 5454</string>
    <string name="profile_email">Email</string>
    <string name="text_suspended">Suspended</string>
    <string name="text_active">Active</string>
    <string name="nickname_already_assigned"> "This nickname is already assigned to another card. Please select a different one."</string>
    <string name="text_valid_otp">Please enter valid otp</string>
    <string name="incorrect_wallet_pin">You entered wrong wallet pin.</string>
    <string name="wallet_pin_mismatch">The wallet PIN you entered doesn\'t match. Please try again.</string>
    <string name="skip">Skip</string>
    <string name="do_you_want_connect_device">Do you want to connect with the device</string>
    <string name="title_active_device">Add Device (Bluetooth)</string>
    <string name="title_passive_device">Add Device (NFC)</string>
    <string name="wants_to_add_device">Do you want to add %1$s?</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="read_more_toast">Needs to receive the Details</string>
    <string name="bluetooth_not_supported">Bluetooth Not Supported</string>
    <string name="de_link_device">Do you want to delete this device?</string>
    <string name="bluetooth_is_required_to_scan_devices">Bluetooth Is Required to Scan Devices</string>
    <string name="development_is_in_progress">Feature under development…</string>
    <string name="text_edit">Edit</string>
    <string name="verify_login">Login</string>
    <string name="verify_code">Verify Code</string>
    <string name="verify_login_code">Verify code</string>
    <string name="create_wallet_pin">Create Wallet PIN</string>
    <string name="confirm_wallet_pin">Confirm Wallet PIN</string>
    <string name="create_wallet_pin_msg">You will need it to view your payment \n transaction data and manage your digital \n payment cards.</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin">Create PIN</string>
    <string name="menu_home">Home</string>
    <string name="menu_health">Health</string>
    <string name="terms_conditions">Terms and Conditions description</string>
    <string name="menu_pay">Wallet</string>
    <string name="return_to_fission_home">Return to Demo home</string>
    <string name="wallet">Wallet</string>
    <string name="bank_alert_msg">Your bank has sent you an SMS. Please copy the code from the SMS here:</string>
    <string name="text_add_new_msg">Add a new card that is not in the list above:</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_card_holder_name_display">Cardholder name as displayed on the card</string>
    <string name="text_valid_through">Valid Through</string>
    <string name="text_cvv">CVV</string>
    <string name="text_add_payment_card">Add payment card</string>
    <string name="text_default">Default</string>
    <string name="text_empty_wallet_pin">Please enter wallet PIN</string>
    <string name="weak_wallet_pin_message">The passcode you entered is too weak. Please avoid using simple or common patterns and choose a stronger passcode.</string>
    <string name="settings_text1">Enable/suspend payment function</string>
    <string name="settings_text2">Make default card on this device</string>
    <string name="settings_text3">Receive payment notifications</string>
    <string name="remove_card">Remove card from wearable</string>
    <string name="update_card_nickname">Update Card Nickname</string>
    <string name="update_nickname_msg">Update your card nickname</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="pending_status_msg1">Card digitization in pending state,</string>
    <string name="pending_status_msg2">options viewable post card digitization activation.</string>
    <string name="text_card_deleted_successfully">Successfully deleted card</string>
    <string name="text_card_deleted_error">Unable to delete the card</string>
    <string name="btn_update">Update</string>
    <string name="confirm_make_default_card">Do you want to make this card as default?</string>
    <string name="email"> support@curve.app</string>
    <string name="call"> +6668881234</string>
    <string name="visit_website">Visit Website</string>
    <string name="open_app">Open App</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="header_msg_wearable">Select a card you previously added to a wearable:</string>
    <string name="add_your_first_wearable">Add your first wearable…</string>
    <string name="no_cards_available">Add your card to enable payment</string>
    <string name="wearables">Wearables</string>
    <string name="wearable_cards">Cards on this wearable</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="msg_terms">I agree to the Terms and Conditions</string>
    <string name="feel_good_with_wearables">Feel good with wearables</string>
    <string name="msg_home">Your wearable helps you to remain healthy and now you can also pay with it.</string>
    <string name="read_more">Read more</string>
    <string name="e_mail">Email</string>
    <string name="place_holder_e_mail">Enter your email</string>
    <string name="place_holder_password">Enter your password</string>
    <string name="tv_login_forgot_password">Forgot Password?</string>
    <string name="header_forgot_password">Forgot Password</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="btn_login_new_user_register">New User? Register</string>
    <string name="btn_login_with_google">Sign in with Google</string>
    <string name="btn_login_with_microsoft">Sign in with Microsoft</string>
    <string name="confirm_registration">Confirm</string>
    <string name="tv_no_account">Don\'t have an account?</string>
    <string name="tv_register">Sign up</string>
    <string name="scanning">Scanning…</string>
    <string name="loading">Loading…</string>
    <string name="scan_devices">Scanned Devices</string>
    <string name="no_secora_device_found">No Bluetooth device found. Please try again.</string>
    <string name="make_sure_bluetooth_is_enabled">Make sure, bluetooth is enabled.</string>
    <string name="bluetooth_scan_failed_try_again_delayed">Bluetooth scan failed: too many recent attempts. Please wait a moment and try again.</string>
    <string name="bluetooth_scan_already_active">Bluetooth scan is already active.</string>
    <string name="bluetooth_scan_feature_unsupported">Bluetooth scanning is unsupported on this device.</string>
    <string name="bluetooth_scan_internal_error">Bluetooth scan encountered an internal error.</string>
    <string name="bluetooth_scan_failed_generic">Bluetooth scan failed due to an unexpected error.</string>
    <string name="nearby_devices_permission_settings_message">Nearby devices permission is required to scan and connect. Please enable it in App Settings to continue.</string>
    <string name="try_another_method">Try another method</string>
    <string name="request_verification_code_again">Request verification code again</string>
    <string name="bank_identification">Bank Identification</string>
    <string name="text_add_card_msg">Give your card a nickname\n(example: \"My personal card\")</string>
    <string name="text_add_card_hint">Nickname</string>
    <string name="btn_add_card_name">Add Card Nickname</string>
    <string name="tv_success_adding">Success adding</string>
    <string name="btn_done">Done</string>
    <string name="btn_logout">Logout</string>
    <string name="text_submit">Submit</string>
    <string name="login_using_fingerprint">Log in using your fingerprint</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="oem_details">Enter OEM Info</string>
    <string name="text_base_url">Base Url</string>
    <string name="base_url_hint">https://secorawallet-uat.infineon.com</string>
    <string name="token_service_url">Token Service Url</string>
    <string name="text_settings">Settings</string>
    <string name="text_ready_to_scan">Ready to Scan</string>
    <string name="text_hold_wearable">Hold your wearable against the upper back of your phone</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="place_holder_repeat_password">Confirm password</string>
    <string name="lets_get_started">Create Account</string>
    <string name="already_have_a_login">Sign in</string>
    <string name="wearable_passcode_toolbar">Wearable passcode</string>
    <string name="wearable_configuration">Wearable configuration</string>
</resources>