<?xml version="1.0" encoding="utf-8"?>
<!--
  SPDX-FileCopyrightText: 2025 Infineon Technologies AG

  SPDX-License-Identifier: MIT

  Description: custom_dialog_buttons.xml defines a vertical LinearLayout used
  in a custom dialog. It contains TextViews and EditTexts to allow the user
  to enter a base URL or other URL-related settings.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_base_url" />

    <EditText
        android:id="@+id/dynamicUrlTextUser"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="10dp"
        android:autofillHints=""
        android:hint="@string/base_url_hint"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/dynamicUrlText"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        android:hint="@string/token_service_url"
        android:inputType="textUri"
        android:autofillHints="url"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit_btn_splash"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ui_custom_btn"
        android:paddingStart="@dimen/dp12"
        android:paddingEnd="@dimen/dp12"
        android:paddingTop="@dimen/dp8"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/text_submit" />
</LinearLayout>