<?xml version="1.0" encoding="utf-8"?>
<!--
  SPDX-FileCopyrightText: 2025 Infineon Technologies AG

  SPDX-License-Identifier: MIT

   Description: Layout for resetting a user password, including
    username verification, reset code entry, new password creation,
    and password reset confirmation.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle600"
            android:text="@string/header_forgot_password"
            android:textSize="@dimen/sp36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/TextStyle400"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:textSize="@dimen/sp18"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etResetPasswordUsername"
            style="@style/TextStyle400"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/border_grey_white_bg"
            android:hint="@string/place_holder_e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp12"
            android:textSize="@dimen/sp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSendOtp"
            style="@style/AppButton.CustomButton"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/send_otp"
            android:textSize="@dimen/sp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etResetPasswordUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>